tf-infra/digitalocean/sfo3/k8s/static/nginx-test.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/joseluisq/static-web-server:2.9.0-alpine
          resources:
            requests:
              memory: 64Mi
              cpu: 200m
              ephemeral-storage: 200Mi
            limits:
              memory: 128Mi
              cpu: 500m
              ephemeral-storage: 1Gi
          ports:
            - containerPort: 443
          volumeMounts:
            - name: tls-key
              mountPath: "/tls"
              readOnly: true
      volumes:
        - name: tls-key
          secret:
            secretName: nginx-test-tls
