tf-infra/digitalocean/sfo3/k8s/static/nginx-test.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    app: nginx
  ports:
    - port: 443
      targetPort: 443
