tf-infra/digitalocean/sfo3/k8s/static/nginx-test.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
  name: nginx
  labels:
    name: nginx
  namespace: nginx-test
spec:
  rules:
    - host: nginx-test.vyas-n.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 443
  tls:
    - hosts:
        - nginx-test.vyas-n.com
      secretName: nginx-test-tls
